--- a/qzh-store-server/src/main/resources/application-dev.yml
+++ b/qzh-store-server/src/main/resources/application-dev.yml
@@ -59,6 +59,6 @@ eureka:
 logging:
   level:
     com:
-      huidong:
-        qzh: debug
+      qzh:
+        store: debug
   file: logs/qzh-store.log
